--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ env_logger = "0.11.1"
 log = "0.4.20"
 rusqlite = { version = "0.30.0", features = ["bundled"] }
 sea-query = "0.30.7"
-chimitheque_types = { path = "../chimitheque_types" }
 sea-query-rusqlite = "0.5.0"
+serde = { version = "1", features = ["derive"] }
+chimitheque_types = { path = "../chimitheque_types" }
+
