--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,8 @@ edition = "2021"
 [dependencies]
 env_logger = "0.11.1"
 log = "0.4.20"
-rusqlite = { version = "0.30.0", features = ["bundled"] }
-sea-query = "0.30.7"
-sea-query-rusqlite = "0.5.0"
+rusqlite = { version = "0.31.0", features = ["bundled"] }
+sea-query = "0.31.0-rc.4"
+sea-query-rusqlite = "0.6.0-rc.1"
 serde = { version = "1", features = ["derive"] }
 chimitheque_types = { path = "../chimitheque_types" }
-
