--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ sea-query = "0.31.0-rc.4"
 sea-query-rusqlite = "0.6.0-rc.1"
 serde = { version = "1", features = ["derive"] }
 chimitheque_types = { path = "../chimitheque_types" }
+chimitheque_utils = { path = "../chimitheque_utils" }
