Change product table column names.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 env_logger = "0.11.1"
 log = "0.4.20"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
-sea-query = "0.31.0-rc.4"
-sea-query-rusqlite = "0.6.0-rc.1"
+sea-query = "0.31.0"
+sea-query-rusqlite = "0.6.0"
 serde = { version = "1", features = ["derive"] }
 chimitheque_types = { path = "../chimitheque_types" }
 chimitheque_utils = { path = "../chimitheque_utils" }
