--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 env_logger = "0.11.1"
 log = "0.4.20"
-rusqlite = { version = "0.31.0", features = ["bundled"] }
+rusqlite = { version = "0.31.0", features = ["load_extension", "bundled"] }
 sea-query = "0.31.0"
 sea-query-rusqlite = "0.6.0"
 serde = { version = "1", features = ["derive"] }
@@ -16,3 +16,4 @@ chimitheque_types = { path = "../chimitheque_types" }
 chimitheque_utils = { path = "../chimitheque_utils" }
 chimitheque_traits = { path = "../chimitheque_traits" }
 regex = "1.10.4"
+tempfile = "3.13.0"
