--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ chimitheque_utils = { path = "../chimitheque_utils" }
 chimitheque_traits = { path = "../chimitheque_traits" }
 regex = "1.10.4"
 tempfile = "3.13.0"
+chrono = { version = "0.4.41", features = ["serde"] }
